[package]
name = "token_vesting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_vesting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
#anchor-debug = []
#custom-heap = []
#custom-panic = []
#RUSTUP_TOOLCHAIN="nightly-2024-11-19" anchor build

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
solana-program = "1.18.17"
